--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.9.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "ag-grid-react": "^34.2.0",
+    "antd": "^5.27.5",
     "axios": "^1.8.2",
     "chart.js": "^4.4.7",
     "classnames": "^2.5.1",
@@ -37,6 +42,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "redux": "5.0.1",
+    "redux-thunk": "^3.1.0",
     "simplebar-react": "^3.3.0"
   },
   "devDependencies": {
@@ -50,7 +56,13 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.2",
     "prettier": "3.5.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.85.0",
     "vite": "^6.1.0"
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "API_URL"
+    ]
   }
 }
