--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "ag-grid-react": "^34.2.0",
-    "antd": "^5.27.5",
     "axios": "^1.8.2",
     "chart.js": "^4.4.7",
     "classnames": "^2.5.1",
     "core-js": "^3.40.0",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.7",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
