--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 
 
 # API_URL="https://tedu-social.herokuapp.com"
-VITE_URL="http://103.156.47.16:5005"
+# VITE_URL="http://103.156.47.16:5005"
+VITE_URL="http://192.168.1.254:5005"
