--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-router-dom": "^7.1.5",
     "redux": "5.0.1",
     "redux-thunk": "^3.1.0",
-    "simplebar-react": "^3.3.0"
+    "simplebar-react": "^3.3.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
